--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1>Hello world!</h1> 
+    <div id="map"></div>
     <script src="js/bundle.js"></script>
   </body>
 </html>
